# s3ssion

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: FeaturesTestCI .yml
src/: s3ssion.py  session.py
tests/: test_changepass.py  test_changepasserror.py  test_incorrectlogin.py  test_login.py  test_login_when_already_loggedin.py  test_logout.py  test_logout_when_no_login.py  test_usercount.py
